<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_attitude"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:height="20dp"
                    android:maxHeight="20dp"
                    android:maxWidth="100dp"
                    android:minHeight="20dp"
                    android:minWidth="100dp"
                    android:text=""
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="100dp"
                    android:height="180dp"
                    android:maxHeight="180dp"
                    android:maxWidth="100dp"
                    android:minHeight="180dp"
                    android:minWidth="100dp"
                    android:text=""
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_num"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/pointNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_time"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/scanTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_repeat"
                    android:textSize="12sp" />

                <NumberPicker
                    android:id="@+id/scanRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_list"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/white_list_bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:width="100dp"
                    android:height="100dp"
                    android:background="@android:color/white"
                    android:hint="@string/white_list_bs"
                    android:maxHeight="200dp"
                    android:maxWidth="200dp"
                    android:minHeight="100dp"
                    android:minWidth="100dp"
                    android:text="@string/white_list_bs_value"
                    android:textColor="@android:color/holo_green_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ListView
                android:id="@+id/list1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
            <ListView
                android:id="@+id/list2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

</android.support.constraint.ConstraintLayout>